Fixed video not showing

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -17949,6 +17949,9 @@ body.subpage.single.single-activity {
             padding: 0 5px;
           }
         }
+        .name span {
+          padding-left: 0!important;
+        }
         .pass-item {
           margin: 0 0 18px;
           display: flex;
